--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,27 @@
-<employee-list></employee-list>
+<div class="row p-2">
+  <div class="col-md-8 col-sm-6 p-2">
+    <div class="card">
+      <div class="card-body">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">Regular</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">Contractor</label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 p-2">
+    <button type="submit" class="btn btn-primary mb-3 float-end">Add Employee</button>
+  </div>
+</div>
+<div class="row p-2">
+  <div class="col-md-6 p-2">
+    <employee-list></employee-list>
+  </div>
+  <div class="col-md-6 p-2">
+    <employee-detail></employee-detail>
+  </div>
+</div>
