--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -2,12 +2,12 @@
   <div class="col-md-8 col-sm-6 p-2">
     <div class="card">
       <div class="card-body">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <div class="form-check col-sm-6 col-md-6">
+          <input class="form-check-input" type="checkbox" [checked]="showRegularEmployee" (click)="regularCheckChanged()">
           <label class="form-check-label" for="flexCheckDefault">Regular</label>
         </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <div class="form-check col-sm-6 col-md-6">
+          <input class="form-check-input" type="checkbox" [checked]="showContractEmployee">
           <label class="form-check-label" for="flexCheckDefault">Contractor</label>
         </div>
       </div>
