--- a/src/app/employee/employee-detail/employee-detail.component.html
+++ b/src/app/employee/employee-detail/employee-detail.component.html
@@ -1,5 +1,5 @@
-<div class="card">
+<div class="card" *ngIf="selectedEmployee">
   <div class="card-body">
-    This is some text within a card body.
+    Employee Name: {{ selectedEmployee.employeeName}}
   </div>
 </div>
