--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,7 +1,15 @@
-<ul class="list-group">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
-</ul>
+<div class="card">
+
+  <div class="card-header">
+  </div>
+
+  <div class="card-body" *ngIf="employeesList">
+    <div class="list-group">
+      <button class="list-group-item list-group-item-action rounded-0"
+              *ngFor="let employee of employeesList"
+              [ngClass]="{'active': employee?.employeeId === selectedEmployee?.employeeId}"
+              (click)="employeeSelected(employee)">{{ employee.employeeName }}
+      </button>
+    </div>
+  </div>
+</div>
