--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -3,11 +3,11 @@
     <div class="card">
       <div class="card-body">
         <div class="form-check col-sm-6 col-md-6">
-          <input class="form-check-input" type="checkbox" [checked]="showRegularEmployee" (click)="regularCheckChanged()">
+          <input class="form-check-input" type="checkbox" [checked]="showRegularEmployee$ | async" (click)="regularCheckChanged()">
           <label class="form-check-label" for="flexCheckDefault">Regular</label>
         </div>
         <div class="form-check col-sm-6 col-md-6">
-          <input class="form-check-input" type="checkbox" [checked]="showContractEmployee">
+          <input class="form-check-input" type="checkbox" [checked]="showContractEmployee$ | async">
           <label class="form-check-label" for="flexCheckDefault">Contractor</label>
         </div>
       </div>
@@ -19,7 +19,9 @@
 </div>
 <div class="row p-2">
   <div class="col-md-6 p-2">
-    <employee-list></employee-list>
+    <div class="card">
+      <employee-list [employeesList]="employees$ | async"></employee-list>
+    </div>
   </div>
   <div class="col-md-6 p-2">
     <employee-detail></employee-detail>
