--- a/src/app/employee/employee-detail/employee-detail.component.html
+++ b/src/app/employee/employee-detail/employee-detail.component.html
@@ -1,5 +1,6 @@
 <div class="card" *ngIf="selectedEmployee">
   <div class="card-body">
-    Employee Name: {{ selectedEmployee.employeeName}}
+    Employee Name: {{ selectedEmployee.employeeName}} <br/>
+    Employee Type: {{selectedEmployee.employeeType}}
   </div>
 </div>
