--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -13,3 +13,9 @@
     </div>
   </div>
 </div>
+
+<div class="card" *ngIf="employeeDetail">
+  <div class="card-body">
+    <employee-detail [selectedEmployee]="employeeDetail"></employee-detail>
+  </div>
+</div>
