--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -7,7 +7,7 @@
           <label class="form-check-label" for="flexCheckDefault">Regular</label>
         </div>
         <div class="form-check col-sm-6 col-md-6">
-          <input class="form-check-input" type="checkbox" [checked]="showContractEmployee$ | async">
+          <input class="form-check-input" type="checkbox" [checked]="showContractEmployee$ | async" (click)="contractorCheckChanged()">
           <label class="form-check-label" for="flexCheckDefault">Contractor</label>
         </div>
       </div>
